webapp-nana/hello-world-deployment.yaml
# POD 1

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello1-deployment
  labels:
    app: hello1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello1
  template:
    metadata:
      labels:
        app: hello1
    spec:
      containers:
        - name: hello1
          image: hashicorp/http-echo:0.2.3
          args:
          - "-text=HELLO 11111111"

---
apiVersion: v1
kind: Service
metadata:
  name: hello1-service
  namespace: testes1
spec:
  selector:
    app: hello1
  ports:
    - protocol: TCP
      port: 5678
    


# POD 2

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello2-deployment
  labels:
    app: hello2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello2
  template:
    metadata:
      labels:
        app: hello2
    spec:
      containers:
        - name: hello2
          image: hashicorp/http-echo:0.2.3
          args:
          - "-text=HELLO 2222222"

---
apiVersion: v1
kind: Service
metadata:
  name: hello2-service
  namespace: testes1
spec:
  selector:
    app: hello2
  ports:
    - protocol: TCP
      port: 5678
