webapp-nana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: "/hello1"
            pathType: Prefix
            backend:
              service:
                name: hello1-service
                port:
                  number: 5678
          - path: "/hello2"
            pathType: Prefix
            backend:
              service:
                name: hello2-service
                port:
                  number: 5678  
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: webapp-internal-service
                port:
                  number: 3000
